--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ rouge-score>=0.0.4
 scikit-learn>=0.24.0
 numpy>=1.19.0
 pyyaml>=5.4.0
+pytest>=7.0.0
+pytest-cov>=4.0.0
+pytest-xdist>=3.0.0
+pytest-timeout>=2.1.0
